  * New configuration variable BEEP controlling the style of the system
    beep.  Documented in console-setup(5).
  * console-setup-{linux,freebsd}: Add an alternative dependency
    init-system-helpers (>= 1.29~) to initscripts.  Closes: #804988.
  * keyboard-setup.sh.init: remove the unnecessary "Should-Start: keymap
    udev".  Thanks to Felipe Sateler for the helpful discussion.
  * Keyboard/kbdcompiler: generate properly the precomiled keymaps for
    console-setup-mini; they have been totaly broken for a while...
  * Keyboard/{xmlreader,compose_translator}: use utf8 instead of the
    deprecated encoding pragma.

 -- Anton Zinoviev <zinoviev@debian.org>  Wed, 11 May 2016 15:10:07 +0300

console-setup (1.142) unstable; urgency=medium

  [ Updated translations ]
  * Serbian (sr.po) by Dragan Filipović

 -- Christian Perrier <bubulle@debian.org>  Sun, 24 Apr 2016 17:47:41 +0200

console-setup (1.141) unstable; urgency=medium

  * Add systemd units wrapping the init scripts.
    Closes: #796603

 -- Felipe Sateler <fsateler@debian.org>  Fri, 01 Apr 2016 20:24:38 -0300

console-setup (1.140) unstable; urgency=medium

  [ Jon Boden ]
  * keyboard-configuration.postinst: Avoid hurd check on non-hurd systems,
    closes: #818842.

 -- Christian Perrier <bubulle@debian.org>  Tue, 22 Mar 2016 07:46:45 +0100

console-setup (1.139) unstable; urgency=medium

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Japanese (ja.po) by Kenshi Muto
  * Portuguese (Brazil) (pt_BR.po) by Adriano Rafael Gomes
  * Portuguese (pt.po) by Miguel Figueiredo

 -- Christian Perrier <bubulle@debian.org>  Thu, 10 Mar 2016 07:09:41 +0100

console-setup (1.138) unstable; urgency=medium

  [ Anton Zinoviev ]
  * Changes in setupcon:
    - new option -t|--terminal-only.  The functionality of the
      old command 'setupcon -f' is now covered by 'setupcon -f -t';
    - new options --current-tty and --print-commands-only;